--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
 		<main>
 			<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  				<a class="navbar-brand" href="#">Navbar</a>
+  				<a class="navbar-brand" href="#">Home</a>
   				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     					<span class="navbar-toggler-icon"></span>
   				</button>
@@ -17,10 +17,10 @@
         						<a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
       						</li>
       						<li class="nav-item">
-        						<a class="nav-link" href="#">Features</a>
+        						<a class="nav-link" href="#">Registrame</a>
       						</li>
 	      					<li class="nav-item">
-	        					<a class="nav-link" href="#">Pricing</a>
+	        					<a class="nav-link" href="#">Entrar</a>
 	      					</li>
       						<li class="nav-item">
         						<a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
